--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
     "name": "react-js-stepper",
     "version": "1.0.0",
-    "description": "",
+    "description": "Stepper",
     "main": "src/index.js",
     "scripts": {
         "watch": "echo \"Error: no test specified\" && exit 1",
         "build": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@babel/runtime": "^7.15.4",
-        "react": "^17.0.2",
-        "react-router-dom": "^5.3.0"
     },
     "repository": {
         "type": "git",
@@ -26,5 +21,9 @@
         "react",
         "javascript",
         "stepper"
-    ]
+    ],
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-router-dom": "^5.3.0"
+    }
 }
