--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-router-dom": "^5.3.0"
+    },
+    "peerDependencies": {
+        "react": "^16.14.0 || ^17.0.0",
+        "react-router-dom": "^4.0.0 || ^5.0.0"
     }
 }
