--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "Stepper",
     "main": "src/index.js",
     "scripts": {
-        "watch": "echo \"Error: no test specified\" && exit 1",
-        "build": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack --mode=production --node-env=production",
+        "build:dev": "webpack --mode=development",
+        "build:prod": "webpack --mode=production --node-env=production",
+        "watch": "node ./node_modules/webpack-cli/bin/cli.js --watch"
     },
     "repository": {
         "type": "git",
@@ -22,12 +24,24 @@
         "javascript",
         "stepper"
     ],
-    "dependencies": {
+    "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/plugin-transform-runtime": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/runtime": "^7.15.4",
+        "babel-loader": "^8.2.2",
         "react": "^17.0.2",
-        "react-router-dom": "^5.3.0"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
+        "webpack": "^5.60.0",
+        "webpack-cli": "^4.9.1"
     },
     "peerDependencies": {
         "react": "^16.14.0 || ^17.0.0",
-        "react-router-dom": "^4.0.0 || ^5.0.0"
+        "react-router-dom": "^5.3.0"
+    },
+    "dependencies": {
+        "react-router": "^5.2.1"
     }
 }
