--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
         "babel-loader": "^8.2.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
         "webpack": "^5.60.0",
         "webpack-cli": "^4.9.1"
     },
     "dependencies": {
-        "react-router": "^5.2.1"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0"
     }
 }
