--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
     "name": "react-js-stepper",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "Stepper",
-    "main": "src/index.js",
+    "author": "worka <bckworka@gmail.com>",
+    "license": "MIT",
+    "main": "dist/index.js",
+    "module": "dist/index.es.js",
+    "source": "src/index.js",
+    "files": [
+        "dist"
+    ],
     "scripts": {
-        "build": "webpack --mode=production --node-env=production",
-        "build:dev": "webpack --mode=development",
-        "build:prod": "webpack --mode=production --node-env=production",
-        "watch": "node ./node_modules/webpack-cli/bin/cli.js --watch"
+        "build": "rollup -c"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-react": "^7.14.5",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.0.6",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
+        "rollup": "^2.58.3",
+        "rollup-plugin-peer-deps-external": "^2.2.4"
+    },
+    "peerDependencies": {
+        "react": ">=16.8.0",
+        "react-dom": ">=16.8.0",
+        "react-router": ">=5.0.0",
+        "react-router-dom": ">=5.0.0"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/worka/react-js-stepper.git"
     },
-    "author": "worka <bckworka@gmail.com>",
-    "license": "MIT",
     "bugs": {
         "url": "https://github.com/worka/react-js-stepper/issues"
     },
@@ -23,25 +45,5 @@
         "react",
         "javascript",
         "stepper"
-    ],
-    "devDependencies": {
-        "@babel/core": "^7.15.8",
-        "@babel/plugin-transform-runtime": "^7.15.8",
-        "@babel/preset-env": "^7.15.8",
-        "@babel/preset-react": "^7.14.5",
-        "@babel/runtime": "^7.15.4",
-        "babel-loader": "^8.2.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router": "^5.2.1",
-        "react-router-dom": "^5.3.0",
-        "webpack": "^5.60.0",
-        "webpack-cli": "^4.9.1"
-    },
-    "dependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router": "^5.2.1",
-        "react-router-dom": "^5.3.0"
-    }
+    ]
 }
