--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "dist"
     ],
     "scripts": {
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "watch": "rollup -c -w",
+        "prepublishOnly": "yarn build"
     },
     "devDependencies": {
         "@babel/core": "^7.15.8",
